* Tested with WordPress 4.9.
* Added the groups_post_access_posts_where_query_get_post_types filter to allow additional processing to cover for cases like where
  wc_query is set.
* Fixed a notice related to the use of an undefined variable in the Groups_Post_Access class.
* Added the logo and the option to get reminded later to the Groups notice.

= 2.3.0 =
* Tested with WordPress 4.8.
* Fixed a REST API access restriction issue, added the filter rest_prepare_{$post_type} to
  grant or deny access to individual posts.
* Updated the translation template.
* German translation updated.
* Updated the appearance of the network settings.
* Updated the table creation process dropping use of dbDelta() due to its restrictions (can't handle IF NOT EXISTS).
* Fixed an issue related to cache and switching to a blog when neither wp_cache_switch_to_blog() nor wp_cache_reset()
  are implemented, like in WP Engine's object-cache.php which does provide wp_cache_flush().
* Guarded against concurrent execution of multiple instances of plugin activation and deactivation processes.
* Fixed an attempt to refresh capabilities when no previous version was installed.

= 2.2.0 =
* Important change in this version: If access restrictions for post type are disabled, related entries will not be protected anymore.
* Improved the activation performance by simplifying the creation of user-group entries.
  The 'groups_created_user_group' action is not invoked on incorporating existing users and
  a single query is used to create entries for all users.
  Based on suggestions from @haroldkyle in https://github.com/itthinx/groups/pull/14
* Added a warning message displayed in the plugins list when Groups is going to delete its
  data on deactivation.
* Added the ability to obtain user_ids from Groups_Group.
* Improved the performance when obtaining users from Groups_Group.
  Based on suggestions from @tricki in https://github.com/itthinx/groups/pull/50